@@ -14,12 +14,14 @@
  * You should have received a copy of the GNU General Public License
  * along with jetson.  If not, see <http://www.gnu.org/licenses/>.
  */
+
 package org.mashti.jetson;
 
 import java.io.IOException;
 import java.net.InetSocketAddress;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.Callable;
 import java.util.concurrent.CountDownLatch;
@@ -35,6 +37,8 @@ import org.mashti.jetson.exception.RPCException;
 import static org.junit.Assert.fail;
 
 public class NormalOperationTest extends AbstractTest {
+
+    public static final String[] EMPTY_STRING_ARRAY = new String[0];
 
     public NormalOperationTest(final ClientFactory<TestService> client_factory, final ServerFactory<TestService> server_factory) {
 
@@ -52,10 +56,10 @@ public class NormalOperationTest extends AbstractTest {
         Assert.assertEquals(text + integer + object + character, result);
     }
 
-    @Test
+    @Test                                                  
     public void testGetNumberOfMessages() throws Exception {
 
-        Assert.assertEquals(0, client.getNumberOfMessages(new String[0]));
+        Assert.assertEquals(0, client.getNumberOfMessages(EMPTY_STRING_ARRAY));
         Assert.assertEquals(0, client.getNumberOfMessages());
         Assert.assertEquals(-1, client.getNumberOfMessages(null));
         Assert.assertEquals(1, client.getNumberOfMessages(""));
@@ -65,9 +69,9 @@ public class NormalOperationTest extends AbstractTest {
     @Test
     public void testGetCollectionSize() throws Exception {
 
-        Assert.assertEquals(0, client.getCollectionSize(new ArrayList()));
+        Assert.assertEquals(0, client.getCollectionSize(new ArrayList<String>()));
         Assert.assertEquals(-1, client.getCollectionSize(null));
-        Assert.assertEquals(1, client.getCollectionSize(Arrays.asList((String) null)));
+        Assert.assertEquals(1, client.getCollectionSize(Collections.singletonList((String) null)));
         Assert.assertEquals(3, client.getCollectionSize(Arrays.asList("", null, "1")));
     }
 
@@ -187,14 +191,14 @@ public class NormalOperationTest extends AbstractTest {
     public void testSayMinus65535() throws RPCException {
 
         final Integer minus65535 = client.sayMinus65535();
-        Assert.assertEquals(new Integer(-65535), minus65535);
+        Assert.assertEquals(Integer.valueOf(-65535), minus65535);
     }
 
     @Test
     public void testSay65535() throws RPCException {
 
         final Integer _65535 = client.say65535();
-        Assert.assertEquals(new Integer(65535), _65535);
+        Assert.assertEquals(Integer.valueOf(65535), _65535);
     }
 
     @Test
@@ -251,35 +255,34 @@ public class NormalOperationTest extends AbstractTest {
         }
     }
 
-    private void testAddOnRemoteClient(final TestService client) throws RPCException {
-
-        final Integer three = client.addOnRemote(1, 2, temp_server_port);
-        Assert.assertEquals(new Integer(1 + 2), three);
-        final Integer eleven = client.addOnRemote(12, -1, temp_server_port);
-        Assert.assertEquals(new Integer(12 + -1), eleven);
-        final Integer fifty_one = client.addOnRemote(-61, 112, temp_server_port);
-        Assert.assertEquals(new Integer(-61 + 112), fifty_one);
-        final Integer minus_seven = client.addOnRemote(-4, -3, temp_server_port);
-        Assert.assertEquals(new Integer(-4 + -3), minus_seven);
-    }
-
-    private void testAddOnClient(final TestService client) throws RPCException {
-
-        //TODO test null
-        final Integer three = client.add(1, 2);
-        Assert.assertEquals(new Integer(1 + 2), three);
-        final Integer eleven = client.add(12, -1);
-        Assert.assertEquals(new Integer(12 + -1), eleven);
-        final Integer fifty_one = client.add(-61, 112);
-        Assert.assertEquals(new Integer(-61 + 112), fifty_one);
-        final Integer minus_seven = client.add(-4, -3);
-        Assert.assertEquals(new Integer(-4 + -3), minus_seven);
-    }
-
     @Override
     protected TestService getService() {
 
         return new NormalOperationTestService(client_factory);
+    }
+
+    private void testAddOnRemoteClient(final TestService client) throws RPCException {
+
+        final Integer three = client.addOnRemote(1, 2, temp_server_port);
+        Assert.assertEquals(Integer.valueOf(1 + 2), three);
+        final Integer eleven = client.addOnRemote(12, -1, temp_server_port);
+        Assert.assertEquals(Integer.valueOf(12 - 1), eleven);
+        final Integer fifty_one = client.addOnRemote(-61, 112, temp_server_port);
+        Assert.assertEquals(Integer.valueOf(-61 + 112), fifty_one);
+        final Integer minus_seven = client.addOnRemote(-4, -3, temp_server_port);
+        Assert.assertEquals(Integer.valueOf(-4 - 3), minus_seven);
+    }
+
+    private static void testAddOnClient(final TestService client) throws RPCException {
+
+        final Integer three = client.add(1, 2);
+        Assert.assertEquals(Integer.valueOf(1 + 2), three);
+        final Integer eleven = client.add(12, -1);
+        Assert.assertEquals(Integer.valueOf(12 - 1), eleven);
+        final Integer fifty_one = client.add(-61, 112);
+        Assert.assertEquals(Integer.valueOf(-61 + 112), fifty_one);
+        final Integer minus_seven = client.add(-4, -3);
+        Assert.assertEquals(Integer.valueOf(-4 - 3), minus_seven);
     }
 
 }
